--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="utf-8">
         <title>Aura</title>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
 
     <body>
